fix alignment with orderbook section

--- a/packages/frontend/app/routes/trade.module.css
+++ b/packages/frontend/app/routes/trade.module.css
@@ -135,6 +135,7 @@ body {
     display: grid;
     gap: var(--gap-s);
     grid-template-columns: minmax(0, 1fr);
+    height: 100%;
 }
 
 .chartLayout.liqActive {
