--- a/packages/frontend/app/routes/trade/liquidationsChart/LiquidationsChartSection.module.css
+++ b/packages/frontend/app/routes/trade/liquidationsChart/LiquidationsChartSection.module.css
@@ -33,6 +33,6 @@
 
 .startGap {
     width: 100%;
-    height: 20px;
+    height: 26px;
     display: block;
 }
